<resources>
    <string name="app_name">Debt Manager</string>

    <string name="tv_app_name">Debt Manager</string>
    <string name="tv_app_version" translatable="false">1.0.1</string>
    <string name="tv_created">Created</string>
    <string name="tv_created_by">by Ovchinnikov D.O.</string>
    <string name="tv_created_in">in Android Studio IDE</string>
    <string name="tv_vcs">Version Control System:</string>
    <string name="tv_github" translatable="false"><u>GitHub</u></string>
    <string name="tv_version">version: </string>

    <string name="tv_i_owe">I owe</string>
    <string name="tv_owe_me">Owe me</string>
    <string name="tv_owes_me">Owes me</string>

    <string name="tv_i_take">I take</string>
    <string name="tv_i_give">I give</string>

    <string name="tv_msg_empty_list">List is empty.</string>
    <string name="tv_msg_person_add_header">Add person.</string>
    <string name="tv_msg_person_edit_header">Edit person.</string>
    <string name="tv_msg_person_del_header">Delete person?</string>
    <string name="tv_msg_entry_add_header">Add entry.</string>
    <string name="tv_msg_entry_upd_header">Edit entry.</string>
    <string name="tv_msg_entry_del_header">Delete entry?</string>
    <string name="tv_msg_del_fill">Are you sure? This cannot be undone.</string>

    <string name="tv_frag_title_settings">Settings</string>
    <string name="tv_frag_title_language">Language</string>
    <string name="tv_frag_title_information">Information</string>

    <string name="tv_language_en" translatable="false">English</string>
    <string name="tv_language_ru" translatable="false">Русский</string>
    <string name="tv_desc_language_en" translatable="false">English (US)</string>
    <string name="tv_desc_language_ru" translatable="false">Russian (RU)</string>

    <string name="tv_theme_light">Light Theme</string>
    <string name="tv_desc_theme_light">turn on Light Theme</string>
    <string name="tv_theme_dark">Dark Theme</string>
    <string name="tv_desc_theme_dark">turn on Dark Theme</string>

    <string name="tv_set_lang">Language</string>
    <string name="tv_desc_set_lang">choose interface language</string>
    <string name="tv_set_theme">Theme</string>
    <string name="tv_set_theme_desc">choose app theme</string>
    <string name="tv_set_info">Information</string>
    <string name="tv_set_info_desc">about this app</string>


    <string name="btn_text_no">No</string>
    <string name="btn_text_yes">Yes</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_del">Delete</string>
    <string name="btn_text_upd">Update</string>
    <string name="btn_text_edt">Edit</string>
    <string name="btn_text_add">Add</string>

    <string name="iv_desc_app_name" translatable="false">App Name Image</string>
    <string name="iv_desc_total_amount" translatable="false">Total Amount Image</string>
    <string name="iv_desc_info" translatable="false">Info Image</string>
    <string name="iv_desc_person_status" translatable="false">Person Status Image</string>
    <string name="iv_desc_person_item_options" translatable="false">Options Image</string>
    <string name="iv_desc_person_delete" translatable="false">Delete Image</string>
    <string name="iv_desc_person_edit" translatable="false">Edit Image</string>
    <string name="iv_desc_dec_debt" translatable="false">Decease Debt Image</string>
    <string name="iv_desc_inc_debt" translatable="false">Increase Debt Image</string>
    <string name="iv_desc_entry" translatable="false">Entry Default Image</string>
    <string name="iv_desc_entry_status" translatable="false">Entry Status Image</string>
    <string name="iv_desc_entry_swipe_item" translatable="false">Entry Swipe Item Image</string>
    <string name="iv_desc_settings" translatable="false">Setting Image</string>
    <string name="iv_desc_setting_lang" translatable="false">Setting Language Image</string>
    <string name="iv_desc_setting_info" translatable="false">Setting Info Image</string>
    <string name="iv_desc_language_en" translatable="false">Language EN Image</string>
    <string name="iv_desc_language_ru" translatable="false">Language RU Image</string>
    <string name="iv_desc_theme_light" translatable="false">Light Theme Image</string>
    <string name="iv_desc_theme_dark" translatable="false">Dark Theme Image</string>
    <string name="iv_desc_selected" translatable="false">Checkmark Item Selected Image</string>

    <string name="fab_desc_add_person" translatable="false">FAB Image</string>

    <string name="hnt_person_name">Name</string>
    <string name="hnt_entry_amount">Amount</string>
    <string name="hnt_entry_comment">Comment</string>

    <string name="lang_rus" translatable="false">Русский</string>
    <string name="lang_eng" translatable="false">English</string>

    <string name="value" translatable="false">₽</string>

    <string name="sb_item_removed">Entry Removed.</string>
    <string name="sb_undo">UNDO</string>

    <string name="pref_locale_en" translatable="false">EN</string>
    <string name="pref_locale_ru" translatable="false">RU</string>

    <string name="pref_theme_light" translatable="false">Light</string>
    <string name="pref_theme_dark" translatable="false">Dark</string>

    <string name="toast_no_empty_fields_allowed">No empty fields allowed!</string>

    <string name="menu_title_delete">Delete</string>
</resources>