<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_app"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/iv_desc_app_name"
        android:src="@drawable/ic_app" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_info_tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/fragment_info_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_info_tv_app_name">

            <TextView
                android:id="@+id/fragment_info_tv_created"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/tv_created"
                android:textAllCaps="true"
                android:textColor="@color/colorMsgFillText"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_info_tv_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_created_in"
                    android:textColor="@color/colorMsgFillText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/fragment_info_tv_created_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_created_by"
                    android:textColor="@color/colorMsgFillText"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/fragment_info_tv_vcs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_vcs"
            android:textColor="@color/colorMsgFillText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_info_ll" />

        <TextView
            android:id="@+id/fragment_info_tv_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_github"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_info_tv_vcs" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_info_tv_github">

            <TextView
                android:id="@+id/fragment_info_tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_version"
                android:textColor="@color/colorMsgFillText"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/fragment_info_tv_app_version"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_info_tv_github" />

            <TextView
                android:id="@+id/fragment_info_tv_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_app_version"
                android:textColor="@color/colorMsgFillText"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fragment_info_tv_version"
                app:layout_constraintTop_toBottomOf="@id/fragment_info_tv_github" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>