<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/fragment_themes_rl_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10dp">

        <ImageView
            android:id="@+id/fragment_theme_list_iv_theme_light"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/iv_desc_theme_light"
            android:src="@drawable/ic_theme_light" />

        <TextView
            android:id="@+id/fragment_theme_list_tv_theme_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/fragment_theme_list_iv_theme_light"
            android:text="@string/tv_theme_light"
            android:textColor="@color/colorMsgHeaderText"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/fragment_theme_list_tv_desc_theme_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/fragment_theme_list_iv_theme_light"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/fragment_theme_list_iv_theme_light"
            android:text="@string/tv_desc_theme_light"
            android:textColor="@color/colorMsgFillText"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <RadioButton
            android:id="@+id/fragment_theme_list_rb_theme_light_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="8dp"
            android:buttonTint="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_theme_list_rl_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10dp">

        <ImageView
            android:id="@+id/fragment_theme_list_iv_theme_dark"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/iv_desc_theme_dark"
            android:src="@drawable/ic_theme_dark" />

        <TextView
            android:id="@+id/fragment_theme_list_tv_theme_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/fragment_theme_list_iv_theme_dark"
            android:text="@string/tv_theme_dark"
            android:textColor="@color/colorMsgHeaderText"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/fragment_theme_list_tv_desc_theme_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/fragment_theme_list_iv_theme_dark"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/fragment_theme_list_iv_theme_dark"
            android:text="@string/tv_desc_theme_dark"
            android:textColor="@color/colorMsgFillText"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <RadioButton
            android:id="@+id/fragment_theme_list_rb_theme_dark_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="8dp"
            android:buttonTint="@color/colorPrimary" />

    </RelativeLayout>

</LinearLayout>
